style/style.css
a {
  color: #99F;
}

body {
  background-color: #000;
  color: #ffe;
  font-family: 'Lucida Sans Unicode', Verdana, sans-serif;
  height: 96vh;
  text-align: justify;
}

a,
b,
body,
fieldset,
legend,
span,
table,
td {
  font-size: 1.02em;
}

/*div,*/
th,
td {
  border: 1px solid #666;
  border-radius: 0.3em;
  padding: 0.3em;
}

fieldset {
  border-radius: 0.4em;
  margin: 0;
  padding: 0 0.5em 0.5em 0.5em"

}

h2 {
  margin: 0;
}

h2,
h3 {
  text-align: center;
}

img {
  max-width: 10.8em;
  border-radius: 0.4em;
}

legend {
  font-size: 2em;
}

p {
  margin-top: 0em;
  margin-bottom: 0.1em;
}

/*span {
  color: #669;
  font-style: italic;
  font-weight: bold;
  text-decoration-line: underline;
  text-decoration-style: dotted;
}*/

table {
  margin-left: auto;
  margin-right: auto;
  border-spacing: 0px 1px;
}

thead {
  background-color: #000;
  position: sticky;
  top: 0;
}

th+th {
  border-left: 1px dotted #333333;
}


.A4 {
  background-color: #FFF;
  border: 1px solid #333;
  height: calc(29.7cm - 1em);
  /* Tested OK for 150 pages in Chrome */
  left: calc((100% - 21cm)/2);
  margin-bottom: 1em;
  padding-right: 2em;
  position: relative;
  width: 21cm;
}

.a-header {
  padding: 0 0.1em !important;
  font-style: italic;
}

.a-header:hover {
  background: inherit !important;
  color: inherit !important;
}

.client-ibm,
.client-lda,
.client-pas,
.client-uoc,
.client-redexis,
/*.client-t-systems,*/
.client-ayto-valladolid,
.client-ferrovial,
/*.client-clever,*/
.client-uc,
.client-oetker,
.client-tdc,
.client-ufst {
  background-size: auto 2em;
  background-repeat: no-repeat;
  background-position: center;
}

.client-ibm {
  background-image: url("../public/clients/ibm.png");
}

.client-pas {
  background-image: url("../public/clients/pas-mexico-usa.png");
}

.client-lda {
  background-image: url("../public/clients/linea-directa.png");
}

.client-uoc {
  background-image: url("../public/clients/uoc.png");
}

.client-redexis {
  background-image: url("../public/clients/redexis-gas.png");
}

.client-t-systems {
  background-image: url("../public/clients/t-systems.png");
  background-size: 3em auto;
  background-repeat: no-repeat;
  background-position: center;
}

.client-ayto-valladolid {
  background-image: url("../public/clients/ayuntamiento-valladolid.png");
}

.client-ferrovial {
  background-image: url("../public/clients/ferrovial.png");
}

.client-clever {
  background-image: url("../public/clients/clever.png");
  background-size: 3em auto;
  background-repeat: no-repeat;
  background-position: center;
}

.client-uc {
  background-image: url("../public/clients/ultimate-customizer.png");
}

.client-oetker {
  background-image: url("../public/clients/dr-oetker.png");
}

.client-tdc {
  background-image: url("../public/clients/tdc-net.png");
}

.client-ufst {
  background-image: url("../public/clients/ufst.svg");
}

.aidatasci_c {
  background-color: #DE935F;
  /*background-image: repeating-linear-gradient(90deg, #DE935FAA, #DE935F 2px, #DE935F calc(100% - 2px), #DE935FAA);*/
}

.arch_c {
  background-color: #B294BB;
  /*background-image: repeating-linear-gradient(90deg, #B294BBAA, #B294BB 2px, #B294BB calc(100% - 2px), #B294BBAA);*/
}

.bigdataeng_c {
  background-color: #A54242;
  /*background-image: repeating-linear-gradient(90deg, #A54242AA, #A54242 2px, #A54242 calc(100% - 2px), #A54242AA);*/
}

.dataanalistpbi_c {
  background-color: #F0C674;
  /*background-image: repeating-linear-gradient(90deg, #F0C674AA, #F0C674 2px, #F0C674 calc(100% - 2px), #F0C674AA);*/
}

.softwaredev_c {
  background-color: #CC6666;
  /*background-image: repeating-linear-gradient(90deg, #CC6666AA, #CC6666 2px, #CC6666 calc(100% - 2px), #CC6666AA);*/
}

.techcons_c {
  background-color: #81A2BE;
  /*background-image: repeating-linear-gradient(90deg, #81A2BEAA, #81A2BE 2px, #81A2BE calc(100% - 2px), #81A2BEAA);*/
}

.webdev_c {
  background-color: #B5BD68;
  /*background-image: repeating-linear-gradient(90deg, #B5BD68AA, #B5BD68 2px, #B5BD68 calc(100% - 2px), #B5BD68AA);*/
}

.bob {
  /*blue outset border*/
  border: 2px solid #668;
  border-style: outset;
}

.oob {
  /*orange outset border*/
  border: 2px solid #864;
  border-style: outset;
}

.bold-right {
  text-align: right;
  padding-right: 1em;
  font-weight: bold;
}

.category-td {
  font-size: 1rem;
}

.ch12 tr td:nth-child(1) {
  text-align: right;
  font-weight: bold;
}

.centered {
  text-align: center;
}

.clickable-icon {
  cursor: pointer;
  height: 1.5em;
  width: 1.5em;
}

.close-button {
  background-color: #000C;
  color: #FFF;
  top: 0.6em;
  padding: 0 0.4em;
  position: absolute;
  right: 0.6em;
  z-index: 999;
}

.colspan4 {
  padding-left: 10em;
}

.error {
  color: #F00;
  font-size: 1.5em;
}

.first-flex-container-item {
  height: calc(99vh - 400px);
}

.flex-container-2,
.flex-container-3 {
  align-content: stretch;
  align-items: stretch;
  display: flex;
  flex-wrap: wrap;
  gap: 0.3em;
  height: calc(100% - 0.3em);
  justify-content: center;
  width: 100%;
}

.font-size-12-rem {
  font-size: 1.2rem;
}

.grid-container-3 {
  display: grid;
  grid-template-columns: auto auto auto;
}

.hidden {
  display: none;
}

.highlight {
  color: #000000;
  padding: 0.1em;
  border-radius: 0.4em;
  border: 0.1em solid #000;
}

.highlight-active {
  background-color: #9999;
  background-image: repeating-linear-gradient(90deg, #9999, #9999);
}

.highlight-blue {
  background-color: #81A2BE;
  color: #000000;
  padding: 0.1em;
  border-radius: 0.4em;
  border: 0.1em solid #000;
}

.highlight-yellow {
  background-color: #F0C674;
  color: #000000;
  padding: 0.1em;
  border-radius: 0.4em;
  border: 0.1em solid #000;
}

.highlight-orange {
  background-color: #DE935F;
  color: #000000;
  padding: 0.1em;
  border-radius: 0.4em;
  border: 0.1em solid #000;
}

.highlight-red {
  background-color: #CC6666;
  color: #000000;
  padding: 0.1em;
  border-radius: 0.4em;
  border: 0.1em solid #000;
}

.highlight-gray {
  background-color: #C5C8C6;
  color: #000000;
  padding: 0.1em;
  border-radius: 0.4em;
  border: 0.1em solid #000;
}

.invisible {
  visibility: hidden;
}

.lt {
  padding: 0 !important;
  cursor: default;
  left: 0;
  top: 0;
}

.main {
  padding: 16px;
  margin-bottom: 30px;
}

.navbar {
  overflow: hidden;
  background-color: #333;
  position: fixed;
  bottom: 0;
  width: 100%;
}

.navbar a {
  float: left;
  display: block;
  color: #f2f2f2;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
  font-size: 1.3em;
}

.navbar a:hover {
  background: #f1f1f1;
  color: black;
}

.navbar a.active {
  background-color: #04AA6D;
  color: white;
}

.no-border,
.no-border td {
  border-color: #0000;
}

.space-children-01em>* {
  margin: 0.1em 0;
}

.page-number {
  position: relative;
  text-align: center;
  top: calc(100% - 4em);
}

.printable {
  font-style: italic;
}

.r {
  position: relative;
  top: -1em;
  text-align: right;
}

.sidebar {
  /*
  align-items: center;
  justify-content: center;
  transform: rotate(180deg);
  width: 2em;
  */
  border-right: 1px solid #6666;
  display: flex;
  height: min(calc(100% - 1em), 800px);
  margin-right: 0.5em;
  writing-mode: vertical-rl;
}

.sidebar img {
  background-color: #FFF3;
  border: 1px solid #6666;
  border-radius: 0.75em 0 0 0.75em;
  max-width: 2em;
  padding: 1em 0.3em;
}

.sidebar img:hover {
  background-color: #CCCC;
}

.summary-cell {
  font-size: 1.3em;
  padding: 0.6em 0em 0.6em 0.6em;
}

.table-container {
  overflow-y: auto;
  position: relative;
}

.t0 {
  vertical-align: top;
}

.w20vw {
  width: 21%;
}

.w25vw {
  width: 22%;
}

.w25 {
  width: 25vw;
}

.w70 {
  width: 80%;
  padding-right: 2em;
}

.zoom-out-iframe {
  -ms-transform: scale(0.8);
  -moz-transform: scale(0.8);
  -o-transform: scale(0.8);
  -webkit-transform: scale(0.8);
  transform: scale(0.8);

  -ms-transform-origin: 0 0;
  -moz-transform-origin: 0 0;
  -o-transform-origin: 0 0;
  -webkit-transform-origin: 0 0;
  transform-origin: 0 0;
}

#calendarIframe {
  border-width: 0;
  border: 1px solid #666;
  display: block;
  height: 920;
  opacity: 0.8;
  position: absolute;
  top: 0;
  width: 700;
}

#cvWrapper {
  left: calc((100% - 52em) / 2);
  position: relative;
  width: 52em;
}

#flexContentWrapper {
  border-width: 0em;
  padding: 0em;
}

#legend>* {
  text-shadow: 0px 0px 1px #000, 0px 0px 2px #000, 0px 0px 3px #000, 0px 0px 4px #000;
}

#legend td {
  padding: 0.15em;
}

#logs {
  position: absolute;
  top: 0;
  left: 0;
  z-index: 999;
}

#map * {
  border-width: 0;
  max-height: 900px;
}

#mondayTasksByDayTableContainer td {
  font-family: monospace;
  font-size: 0.82rem;
}


::-webkit-scrollbar {
  width: 0.6em;
  height: 0.6em;
  background: transparent;
}

::-webkit-scrollbar-thumb {
  border-radius: 0.3em;
  background: #666;
}

::-webkit-scrollbar-thumb:hover {
  background: #999;
}

::-webkit-scrollbar-corner {
  opacity: 0;
}


@media (min-height:901px) and (min-width:600) and (max-width:1199) {

  .flex-container-2,
  .flex-container-3 {
    flex-direction: column;
  }

  .first-flex-container-item {
    height: 30vh;
  }
}

@media (max-height:900px) and (max-width:599),
(max-height:900px) and (min-width:1200) {

  .flex-container-2,
  .flex-container-3 {
    flex-direction: row;
  }

  .first-flex-container-item {
    height: calc(100% - 320px - 4em);
  }
}

@media print {
  * {
    color: #000;
  }

  a {
    font-style: italic;
    text-decoration: none;
    color: #002 !important;
  }

  body {
    margin: 0 1em 0 2em;
  }

  .page-number {
    top: calc(100% - 1em) !important;
  }

  .printable {
    display: inline !important;
  }

  #rolesTimeline,
  #bottomNavBar {
    display: none !important;
  }
}

